tests/integration/fixtures/laugh/import/error/반복문_내부_import/main.laugh
반복 (변수 i = 0; i < 1; i = i + 1) {
    가져오기 "math.laugh" 별칭 math;
}
